--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fjpedrosa/deploy-toolkit",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Deployment toolkit for Next.js + Bun monorepo projects with Docker",
   "type": "module",
   "main": "./src/index.ts",
@@ -57,8 +57,8 @@
     "bun": ">=1.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com",
-    "access": "restricted"
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   },
   "repository": {
     "type": "git",
