fix: update repository URL in package.json for Deplokit

--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fjpedrosa/deploy-toolkit.git"
+    "url": "git+https://github.com/fjpedrosa/deplokit.git"
   }
 }
